--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 
 :root {
   scroll-behavior: smooth;
-  transition: .5s;
 }
 
 * {
@@ -36,6 +35,15 @@ nav {
   justify-content: space-between;
 }
 
+nav a {
+  font-size: 1.1rem;
+  transition: .3s;
+}
+
+nav a:hover {
+  transform: scale(1.3);
+}
+
 /* Home Start */
 
 .welcome {
@@ -58,7 +66,7 @@ nav {
   font-weight: 900;
 }
 
-.welcome-img>img {
+.welcome-img img {
   width: 400px;
   border-radius: 100%;
 }
